--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/chatapp
-    username: chat
-    password: chatpwd
+    url: ${DB_URL:jdbc:postgresql://localhost:5432/chatapp}
+    username: ${DB_USERNAME:chat}
+    password: ${DB_PASSWORD:chatpwd}
 
   jpa:
     hibernate:
@@ -12,3 +12,7 @@ spring:
   flyway:
     enabled: true
     locations: classpath:db/migration
+
+jwt:
+  secret: ${JWT_SECRET:change-me-please-32bytes-min}
+  expiration-ms: ${JWT_EXPIRATION_MS:3600000}
